[project]
name = "emaux-spv150"
version = "2.1.0"
description = "Home Assistant custom integration for the Emaux SPV150 variable-speed pool pump"
readme = "README.md"
requires-python = ">=3.13"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE"]
authors = [{ name = "0jety0" }]
# Runtime dependencies are provided by Home Assistant and shipped by HACS
# (which only copies custom_components/); nothing is pip-installed at runtime.
dependencies = []

[dependency-groups]
dev = [
    "homeassistant",
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "ruff",
]

[tool.uv]
# This is a Home Assistant integration, not a distributable package: uv only
# manages the dev/test environment, it must not try to build/install the project.
package = false

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "RUF",    # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
